--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="github.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Ranking Github Repositories</title>
   </head>
-  <body>
+  <body style="background-color: rgba(7, 7,7);">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
